# pdfwiki

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  RULES.md  backends.yaml.example  pyproject.toml  pytest.ini  requirements-all.txt  requirements.txt
.claude/: END_SESSION_PROMPT.md  NEW_SESSION_PROMPT.md
.github/workflows/: tests.yml
prompts/: wiki.txt
scripts/: compare_quality.py
seeds/: NOTICE.md  accounting-complete.json  accounting-full.json  accounting-top100.json  accounting-top500.json  accounting.json
src/: cli.py  main.py  pipeline.py  postprocess.py
src/backend/: __init__.py  anthropic.py  base.py  config.py  factory.py  gemini.py  openai_api.py  openai_compat.py  pool.py
src/extract/: fact_extractor.py
src/generate/: classify.py  page_layout.py  pages.py  related.py  renderers.py  synthesize.py  titles.py  util.py  wiki_helpers.py
src/ingest/: pdf_loader.py
src/pdfwiki/: ai_client.py  (+10 more)
tests/: conftest.py  test_backend.py  test_backend_pool.py  test_cli_multi_pdf.py  test_config.py  test_cross_pdf_dedup.py  test_extractor_chunking.py  test_fact_extractor.py  test_fact_hygiene.py  test_filter.py  test_generate_classify.py  test_generate_related.py  test_generate_titles.py  test_generate_wiki_helpers.py  test_ingest.py  test_main_parsing.py  test_main_preflight.py  test_pipeline_offline.py  test_postprocess.py  test_renderers.py  test_retriever.py  test_study_outputs_speed.py  test_synthesize.py  test_transform_cluster.py  test_transform_matching.py  test_transform_merge.py  test_transform_normalize.py  test_writer_vault.py
(+9 files in other folders)
