[project]
name = "pdf-to-wiki"
version = "2.0.0"
description = "Convert academic PDF notes into interlinked Obsidian wiki pages using a two-pass LLM pipeline"
requires-python = ">=3.12"
dependencies = [
    "pypdf>=5.0",
]

[project.optional-dependencies]
# Install the backend(s) you plan to use:
openai = ["openai>=1.0"]        # Ollama, OpenRouter, LM Studio, vLLM, etc.
anthropic = ["anthropic>=0.40"] # Anthropic Claude API
all = ["openai>=1.0", "anthropic>=0.40"]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
